@@ -5,6 +5,12 @@
 set(CTEST_SOURCE_DIRECTORY "${DH_CTEST_SRCDIR}")
 set(CTEST_BINARY_DIRECTORY "${DH_CTEST_CTESTDIR}")
 
+set(CTEST_BZR_COMMAND /usr/bin/bzr)
+set(CTEST_CVS_COMMAND /usr/bin/cvs)
+set(CTEST_GIT_COMMAND /usr/bin/git)
+set(CTEST_HG_COMMAND /usr/bin/hg)
+set(CTEST_SVN_COMMAND /usr/bin/svn)
+
 if(DEFINED DH_CTEST_SITE)
   set(CTEST_SITE "${DH_CTEST_SITE}")
 endif()
@@ -26,6 +32,23 @@ if(DH_CTEST_STEP STREQUAL start)
     set(_track_args TRACK "${DH_CTEST_TRACK}")
   endif()
   ctest_start("${DH_CTEST_DASHBOARD_MODEL}" ${_track_args})
+
+elseif(DH_CTEST_STEP STREQUAL update)
+
+  set(CTEST_UPDATE_VERSION_ONLY TRUE)
+  set(CTEST_UPDATE_VERSION_OVERRIDE)
+  set(CTEST_UPDATE_COMMAND)
+  if(DEFINED DH_CTEST_VERSION_OVERRIDE)
+    set(CTEST_UPDATE_VERSION_OVERRIDE "${DH_CTEST_VERSION_OVERRIDE}")
+    # TODO No way to specify "no tool", so we have to specify something even
+    # though it won't actually be used. Fix this in CMake upstream.
+    set(CTEST_UPDATE_COMMAND /usr/bin/git)
+  endif()
+
+  ctest_start("${DH_CTEST_DASHBOARD_MODEL}" APPEND)
+  ctest_update()
+
+  step_submit(Update)
 
 elseif(DH_CTEST_STEP STREQUAL configure)
 
