@@ -16,5 +16,6 @@ insert_before("dh_auto_test", "dh_ctest_test");
 remove_command("dh_auto_test");
 
 insert_before("dh_ctest_configure", "dh_ctest_start");
+insert_after("dh_ctest_start", "dh_ctest_update");
 
 1;
